fix types contrast

--- a/src/app/components/types/types.component.scss
+++ b/src/app/components/types/types.component.scss
@@ -119,7 +119,7 @@ ion-modal{
 }
 .category-modal-grid-item{
   cursor: pointer;
-    background-color: #d3d3d3;
+    background-color: #9897a1; 
     width: 7rem;
     display: flex;
     justify-content: center;
